chore(core): Add a TetheredSelect component to tether dropdown to body

--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -19,6 +19,11 @@
   height: inherit;
 }
 
+.Select-placeholder,
+.Select--single > .Select-control .Select-value {
+  line-height: 30px;
+}
+
 /* Space out content a bit */
 body {
   font-family: 'Source Sans Pro', sans-serif;
