feat(artifacts): show artifact type as icon in execution summary (#5341)

--- a/app/scripts/modules/core/src/pipeline/status/artifactList.less
+++ b/app/scripts/modules/core/src/pipeline/status/artifactList.less
@@ -9,20 +9,26 @@
       text-overflow: ellipsis;
       overflow: hidden;
       font-size: inherit;
-      height: 12px;
+      height: 18px;
+      line-height: 18px;
     }
 
     dl {
       margin: 0;
     }
 
-    dd, dt {
+    dd,
+    dt {
       display: inline;
     }
 
     dt {
       font-weight: normal;
       padding: 0 4px 0 0;
+    }
+
+    .artifact-icon {
+      padding-right: 4px;
     }
   }
 }
