--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -799,6 +799,7 @@ select:invalid {
     &.ng-dirty,
     &.ng-invalid-validate-min,
     &.ng-invalid-validate-max,
+    &.ng-invalid-required,
     &.highlight-pristine {
       border-color: var(--color-danger);
       .box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075)); // Redeclare so transitions work
