refactor(core): convert notifier functionality to React (#5366)

--- a/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
+++ b/app/scripts/modules/core/src/widgets/notifier/notifier.component.less
@@ -1,46 +1,30 @@
-@import (reference) "~core/presentation/less/imports/commonImports.less";
+@import (reference) '~core/presentation/less/imports/commonImports.less';
 
-notifier {
-  .user-notifications {
-    position: fixed;
+.user-notifications {
+  position: fixed;
+  bottom: 5px;
+  width: 100%;
+  z-index: 3;
+}
+.user-notification {
+  .fade-in(0.1);
+  text-align: center;
+  font-size: 120%;
+  margin: 10px;
+  padding: 10px;
+  background-color: var(--color-accent-g2);
+  box-shadow: 0 2px 5px var(--color-concrete);
+  & > .message {
     width: 100%;
-    z-index: 3;
-  }
-  .user-notifications-top {
-    top: 60px;
-    .user-notification {
-      background-color: var(--color-warning-light);
-    }
-  }
-  .user-notifications-bottom {
-    bottom: 5px;
-  }
-  user-notification {
-    width: 100%;
-  }
-  .user-notification {
-    .fade-in(0.1);
-    text-align: center;
-    font-size: 120%;
-    margin: 10px;
-    padding: 10px;
-    background-color: var(--color-accent-g2);
-    box-shadow: 0 2px 5px var(--color-concrete);
-    & > .message {
+    padding-right: 30px;
+    .action {
       display: inline-block;
-      padding-right: 30px;
-      .action {
-        display: inline-block;
-        padding: 0 10px;
-        font-weight: 600;
-      }
+      padding: 0 10px;
+      font-weight: 600;
     }
-    & > a.close-notification {
-      width: 20px;
-      position: absolute;
-      top: 16px;
-      right: 20px;
-      color: var(--color-mineshaft);
-    }
+  }
+  & > button.close-notification {
+    width: 20px;
+    padding: 1px 5px;
   }
 }
