fix(amazon): filter app load balancer options by account/region in cluster config (#5403)

--- a/app/scripts/modules/amazon/src/serverGroup/configure/wizard/loadBalancers/loadBalancerSelector.component.html
+++ b/app/scripts/modules/amazon/src/serverGroup/configure/wizard/loadBalancers/loadBalancerSelector.component.html
@@ -52,6 +52,9 @@
       <help-field key="aws.loadBalancer.loadBalancers"></help-field>
     </div>
     <div class="col-md-8">
+      <div class="form-control-static" ng-if="!$ctrl.command.backingData.filtered.loadBalancers.length">
+        No classic load balancers found in the selected account/region/VPC
+      </div>
       <ui-select ng-if="$ctrl.command.backingData.filtered.loadBalancers.length"
                  multiple
                  ng-model="$ctrl.command.loadBalancers"
