--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -979,7 +979,7 @@ select:invalid {
     background-color: var(--color-alabaster);
     margin: 0;
     .glyphicon {
-      font-size: 70%;
+      font-size: 13px;
       opacity: 0.7;
       margin-right: 4px;
       font-weight: 200;
@@ -1017,7 +1017,7 @@ select:invalid {
     background-color: var(--color-alabaster);
     margin: 0;
     .glyphicon {
-      font-size: 70%;
+      font-size: 13px;
       opacity: 0.7;
       margin-right: 4px;
     }
@@ -1056,7 +1056,7 @@ select:invalid {
     background-color: var(--color-cirrus);
     margin: 0;
     .glyphicon {
-      font-size: 70%;
+      font-size: 13px;
       opacity: 0.7;
       margin-right: 4px;
     }
