--- a/app/scripts/modules/amazon/src/serverGroup/configure/wizard/loadBalancers/loadBalancerSelector.component.html
+++ b/app/scripts/modules/amazon/src/serverGroup/configure/wizard/loadBalancers/loadBalancerSelector.component.html
@@ -8,7 +8,7 @@
         <li ng-repeat="targetGroup in $ctrl.command.viewState.dirty.targetGroups">{{targetGroup}}</li>
       </ul>
       <p class="text-right">
-        <a class="btn btn-sm btn-default dirty-flag-dismiss" href ng-click="$ctrl.command.viewState.dirty.targetGroups = null">Okay</a>
+        <a class="btn btn-sm btn-default dirty-flag-dismiss" href ng-click="$ctrl.clearWarnings('targetGroups')">Okay</a>
       </p>
     </div>
   </div>
@@ -42,7 +42,7 @@
         <li ng-repeat="loadBalancer in $ctrl.command.viewState.dirty.loadBalancers">{{loadBalancer}}</li>
       </ul>
       <p class="text-right">
-        <a class="btn btn-sm btn-default dirty-flag-dismiss" href ng-click="$ctrl.command.viewState.dirty.loadBalancers = null">Okay</a>
+        <a class="btn btn-sm btn-default dirty-flag-dismiss" href ng-click="$ctrl.clearWarnings('loadBalancers')">Okay</a>
       </p>
     </div>
   </div>
