--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -16,6 +16,12 @@ RUN wget https://storage.googleapis.com/kubernetes-release/release/stable.txt &&
   chmod +x kubectl && \
   mv ./kubectl /usr/local/bin/kubectl
 
+RUN curl -o heptio-authenticator-aws https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-06-05/bin/linux/amd64/heptio-authenticator-aws && \
+  chmod +x ./heptio-authenticator-aws && \
+  mv ./heptio-authenticator-aws /usr/local/bin/heptio-authenticator-aws
+
+ENV PATH "$PATH:/usr/local/bin/heptio-authenticator-aws"
+
 ENV PATH=$PATH:/opt/google-cloud-sdk/bin/
 
 RUN adduser -D -S spinnaker
