--- a/src/kayenta/report/list/executionList.less
+++ b/src/kayenta/report/list/executionList.less
@@ -1,6 +1,7 @@
+.execution-list-container {
+  overflow-y: auto;
+}
+
 .execution-list-table {
-  .list-group {
-    overflow-y: auto;
-    margin-bottom: 0;
-  }
+  margin-bottom: 0;
 }
