--- a/src/kayenta/report/detail/metricResultsList.less
+++ b/src/kayenta/report/detail/metricResultsList.less
@@ -14,7 +14,11 @@
   }
 
   .metric-result-classification {
-    margin-right: 15px;
+    margin-right: 3px;
+  }
+
+  .table-row {
+    cursor: pointer;
   }
 
   .list-group {
