--- a/src/kayenta/stages/kayentaStage/canaryRunSummaries.less
+++ b/src/kayenta/stages/kayentaStage/canaryRunSummaries.less
@@ -1,13 +1,5 @@
 .canary-run-summaries {
-  > .horizontal {
-    padding: 7px;
-  }
-
-  .grey-border-bottom {
-    border-bottom: 1px solid var(--color-alto);
-
-    &:last-child {
-      border-bottom: none;
-    }
+  .native-table-header {
+    background-color: transparent;
   }
 }
