--- a/src/kayenta/components/canaryScore.component.less
+++ b/src/kayenta/components/canaryScore.component.less
@@ -53,24 +53,22 @@
 }
 
 .score-large .score.score-label {
-  height: 48px;
+  height: auto;
   line-height: 48px;
-  padding: 0 10px 0 10px;
-  font-size: 200%;
+  padding: 0 10px;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 0;
   border-radius: 0;
-  margin: 0 0 5px 10px;
-  min-width: 48px;
   display: inline-block;
 }
 
 .score.score-report {
-  display: flex;
   align-items: center;
-  flex-direction: column;
-  padding: 15px;
-  font-size: 200%;
-  border-radius: 0;
-  min-width: 30px;
+  padding: 12px 12px 6px;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 10px;
   height: 100%;
 }
 
