fix(configs): use a white BG for config metrics to work w/ native stickiness (#392)

--- a/src/kayenta/canary.less
+++ b/src/kayenta/canary.less
@@ -39,7 +39,7 @@
   }
 
   .config-detail {
-    padding: 1rem;
+    padding: 0 1rem 1rem;
     margin-bottom: 40px;
     overflow-y: auto;
     .config-detail-header {
@@ -48,6 +48,10 @@
       .heading-1 {
         margin: 3px 0 0 0;
       }
+    }
+
+    .contents .native-table-header {
+      padding-top: 10px;
     }
   }
 
@@ -140,6 +144,12 @@
   .header-transparent {
     .native-table-header {
       background-color: transparent;
+    }
+  }
+
+  .header-white {
+    .native-table-header {
+      background-color: white;
     }
   }
 
