chore: bump spinnaker packages and their dependencies (#400)

--- a/src/kayenta/canary.less
+++ b/src/kayenta/canary.less
@@ -43,8 +43,7 @@
     margin-bottom: 40px;
     overflow-y: auto;
     .config-detail-header {
-      padding-right: 15px;
-      padding-bottom: 7px;
+      padding: 5px 15px 2px 0;
       .heading-1 {
         margin: 3px 0 0 0;
       }
