--- a/src/kayenta/canary.less
+++ b/src/kayenta/canary.less
@@ -43,7 +43,8 @@
     margin-bottom: 40px;
     overflow-y: auto;
     .config-detail-header {
-      padding: 5px 15px 2px 0;
+      padding-right: 15px;
+      padding-bottom: 7px;
       .heading-1 {
         margin: 3px 0 0 0;
       }
