feat(json): use Ace Editor for JSON editing (#406)

--- a/src/kayenta/edit/configJson.less
+++ b/src/kayenta/edit/configJson.less
@@ -1,3 +1,14 @@
+.ace-editor {
+  div,
+  span {
+    font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+  }
+
+  > div.ace_gutter {
+    z-index: 0;
+  }
+}
+
 .kayenta-config-json {
   textarea {
     height: 65vh;
